--- a/style.css
+++ b/style.css
@@ -1,9 +1,29 @@
 /*custom css*/
-
+.container{
+  width:100%;
+}
 body {
   padding-left: 0px;
 }
+table {
+    font-family: arial, sans-serif;
+    border-collapse: collapse;
+    margin-top:10px;
+    width: 100%;
+}
 
+td, th {
+    border: 1px solid #dddddd;
+    text-align: left;
+    padding: 8px;
+}
+
+tr:nth-child(even) {
+    background-color: #crimson;
+}
+.price{
+  margin-top:10px;
+}
 #row1 {
   height: 120px;
 }
@@ -15,7 +35,7 @@ body {
 #fitme2 {
   margin-top: 15px;
   font-size: 90px;
-  font-weight: bold; 
+  font-weight: bold;
   color: #DD4861;
   opacity: 0.80;
 }
@@ -138,7 +158,7 @@ body {
   background-color: #DD4861;
   height: 500px;
   position: relative;
-  top: 800px;
+  top: 900px;
   padding-top: 50px;
 }
 
@@ -206,12 +226,21 @@ body {
   position: relative;
   top: 700px;
 }
+#description1 {
+  position: relative;
+  top:0;
+  height:300px;
+}
 
 #exercise {
   margin-top: 70px;
   font-weight: bold;
 }
-
+#exercise1 {
+  margin-top: 20px;
+  margin-left: 100px;
+  font-weight: bold;
+}
 #posline5 {
   transform: scale(129,2);
   color:   #DD4861;
@@ -226,4 +255,10 @@ body {
   color: #393939;
   font-weight: bold;
   opacity: 0.80;
+}
+#classes{
+  width: 70%;
+}
+#row3{
+  height:500px;
 }
