--- a/style.css
+++ b/style.css
@@ -23,6 +23,10 @@ tr:nth-child(even) {
 }
 .price{
   margin-top:10px;
+  float: right;
+}
+.total{
+  float: right;
 }
 #row1 {
   height: 120px;
@@ -158,7 +162,14 @@ tr:nth-child(even) {
   background-color: #DD4861;
   height: 500px;
   position: relative;
-  top: 900px;
+  top: 1000px;
+  padding-top: 50px;
+}
+#footer1 {
+  background-color: #DD4861;
+  height: 500px;
+  position: relative;
+  top: 200px;
   padding-top: 50px;
 }
 
@@ -229,7 +240,8 @@ tr:nth-child(even) {
 #description1 {
   position: relative;
   top:0;
-  height:300px;
+  height:500px;
+  width: 50%;
 }
 
 #exercise {
